--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
 # FastAPI and related libraries
-fastapi # fastapi
+fastapi==0.115.9 # fastapi
 
 # HTTP client
-httpx # httpx
+httpx==0.28.1 # httpx
 
 # SDK
-openai # openai
-google-genai # google.genai
-anthropic # anthropic
-
-# Tokenization for OpenAI
-tiktoken # tiktoken
+openai==1.63.2 # openai
+google-genai==1.2.0 # google.genai
+anthropic==0.47.1 # anthropic
 
 # File processing
-pillow # PIL
-PyMuPDF # fitz
-python-docx # docx
-openpyxl # openpyxl
-python-pptx # pptx
+PyMuPDF==1.25.3 # fitz
+python-docx==1.1.2 # docx
+openpyxl==3.1.5 # openpyxl
+python-pptx==1.0.2 # pptx
 
 # Testing
-pytest # pytest
-pytest-asyncio
-python-dotenv #dotenv
-protobuf
+pytest==8.3.4 # pytest
+pytest-asyncio==0.25.3
+python-dotenv==1.0.1 #dotenv
+protobuf==5.29.3
