--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ tenacity # tenacity
 
 # SDK
 openai # openai
-google-genai==1.2.0 # google.genai
+google-genai # google.genai
 anthropic # anthropic
 
 # File processing
