--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.6.6-beta.1"
 description = "A Bridge for LLMs"
 readme = "README.md"
 requires-python = ">=3.12"
-license = {text = "MIT"}
+license = "MIT"
 authors = [
     {name = "windsnow1025", email = "windsnow1025@gmail.com"}
 ]
@@ -33,6 +33,9 @@ test = [
     "python-dotenv",
     "protobuf"
 ]
+
+[tool.setuptools]
+packages = ["llm_bridge"]
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
