--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "LLM-Bridge"
-version = "1.6.6-beta.1"
+version = "1.6.6-beta.3"
+authors = [
+    {name = "windsnow1025", email = "windsnow1025@gmail.com"}
+]
 description = "A Bridge for LLMs"
 readme = "README.md"
 requires-python = ">=3.12"
+keywords = ["lllm", "ai"]
 license = "MIT"
-authors = [
-    {name = "windsnow1025", email = "windsnow1025@gmail.com"}
+classifiers = [
+    "Framework :: FastAPI",
+    "Programming Language :: Python :: 3",
 ]
 dependencies = [
     "fastapi",
@@ -34,8 +39,9 @@ test = [
     "protobuf"
 ]
 
-[tool.setuptools]
-packages = ["llm_bridge"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["llm_bridge*"]
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
