--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "A Bridge for LLMs"
 readme = "README.md"
 requires-python = ">=3.12"
-keywords = ["lllm", "ai"]
+keywords = ["llm", "ai"]
 license = "MIT"
 classifiers = [
     "Framework :: FastAPI",
