--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "LLM-Bridge"
-version = "1.7.12"
+version = "1.7.13"
 authors = [
     {name = "windsnow1025", email = "windsnow1025@gmail.com"}
 ]
@@ -26,7 +26,7 @@ dependencies = [
     "google-genai",
     "anthropic",
     "PyMuPDF",
-    "docxlatex",
+    "docxlatex>=1.1.1",
     "openpyxl",
     "python-pptx",
 ]
