--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "LLM-Bridge"
-version = "1.8.1"
+version = "1.9.0-alpha.0"
 authors = [
     {name = "windsnow1025", email = "windsnow1025@gmail.com"}
 ]
