--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "LLM-Bridge"
-version = "1.10.3"
+version = "1.11.0-alpha.0"
 authors = [
     {name = "windsnow1025", email = "windsnow1025@gmail.com"}
 ]
@@ -23,7 +23,7 @@ dependencies = [
     "tenacity",
     "openai==1.106.1",
     "tiktoken==0.11.0",
-    "google-genai==1.28.0",
+    "google-genai==1.46.0",
     "anthropic==0.66.0",
     "PyMuPDF",
     "docxlatex>=1.1.1",
