--- a/usage/.env.example
+++ b/usage/.env.example
@@ -1,6 +1,7 @@
 OPENAI_API_KEY=
 GEMINI_FREE_API_KEY=
 GEMINI_PAID_API_KEY=
+GEMINI_VERTEX_API_KEY=
 ANTHROPIC_API_KEY=
 AZURE_API_KEY=
 AZURE_API_BASE=
