--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ tenacity # tenacity
 openai==1.106.1 # openai
 tiktoken==0.11.0 # tiktoken
 google-genai==1.46.0 # google.genai
-anthropic==0.66.0 # anthropic
+anthropic==0.75.0 # anthropic
 
 # File processing
 PyMuPDF # fitz
-docxlatex # docxlatex
+docxlatex>=1.1.1 # docxlatex
 openpyxl # openpyxl
 python-pptx # pptx
 
