--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "LLM-Bridge"
-version = "1.14.1"
+version = "1.15.0-alpha.0"
 dependencies = [
     "fastapi",
     "httpx",
