--- a/usage/.env.example
+++ b/usage/.env.example
@@ -1,7 +1,7 @@
 OPENAI_API_KEY=
-GEMINI_FREE_API_KEY=
-GEMINI_PAID_API_KEY=
-GEMINI_VERTEX_API_KEY=
+GOOGLE_AI_STUDIO_FREE_TIER_API_KEY=
+GOOGLE_AI_STUDIO_API_KEY=
+VERTEX_AI_API_KEY=
 ANTHROPIC_API_KEY=
 AZURE_API_KEY=
 AZURE_API_BASE=
